# Sandbox

./: .gitignore
Linux_notes/devices/: notes.md
architecture/platform_api/client/: CMakeLists.txt  main.cpp
architecture/platform_api/client/platform_api/: api.hpp
architecture/platform_api/client/platform_api/implementations/platform_1/: CMakeLists.txt  api_impl.cpp
architecture/platform_api/client/platform_api/implementations/platform_2/: CMakeLists.txt  api_impl.cpp
c_lib_with_cpp_nullptr/: CMakeLists.txt  build.sh  main.cpp
c_lib_with_cpp_nullptr/c_lib/: Makefile  c_lib.c  c_lib.h
cmake-export-library/: CMakeLists.txt  Config.cmake.in  README.md  build.sh
cmake-export-library/app/: CMakeLists.txt  main.cpp
cmake-export-library/cpack-scripts/: MultiCPackConfig.cmake
cmake-export-library/include/: interface.hpp
cmake-export-library/src/: interface.cpp
cmake-include-directories/: CMakeLists.txt
cmake-include-directories/app/: CMakeLists.txt  main.cpp
cmake-include-directories/lib/: CMakeLists.txt  lib.cpp
cmake-include-directories/lib/subLib/: lib2.cpp  lib2.hpp
cmake_compile_definitions/: CMakeLists.txt  main.cpp
cmake_external_project/: build.sh
cmake_external_project/app/: CMakeLists.txt  main.cpp
cmake_external_project/external_dir/: CMakeLists.txt  foo.cpp  foo2.cpp
cmake_external_project/external_dir/cmake/: fooLibConfig.cmake
common_c_cpp_header/: CMakeLists.txt  README.md  common_lib.c  common_lib.cpp  common_lib.h
common_c_cpp_header/c_client/: c_client.c  c_client.h
common_c_cpp_header/cpp_client/: cpp_client.cpp
get_bash_script_directory/: test.sh
gtest/: CMakeLists.txt  foo.cpp  foo.hpp  main.cpp  testFoo.cpp
interviews/: inheritance.cpp  inline_namespace.cpp
interviews/inline/: foo.hpp  fuu.cpp  fuu.hpp  main.cpp
interviews/message_processing/: README.md
interviews/message_processing/project-2022 06 0708 54 52/: CMakeLists.txt  main.cpp
interviews/message_processing/project-2022 06 0708 54 52/test/: test.cpp
link-lib-with-higher-cpp-standard/: CMakeLists.txt  main.cpp
link-lib-with-higher-cpp-standard/lib/: CMakeLists.txt  lib.cpp  lib.hpp
pmr/: CMakeLists.txt  CustomTypes.hpp  FixedSizedMemoryResource.hpp  MonotonicMemoryResource.hpp  MoreRealisticExample.cpp  MoreRealisticExample.hpp  main.cpp
pointer-to-pointer/: main.cpp  test  test_c
private-scope-vs-c-language/c_code/: Makefile  backup.Makefile  my_thread.c  my_thread.h
private-scope-vs-c-language/cpp_code/: CMakeLists.txt  customType.cpp  customType.hpp  main.cpp
type_traits/: CMakeLists.txt  README.md  build.sh  has_constructor.hpp  has_function.hpp  main.cpp
type_traits/ast/: CMakeLists.txt  README.md  build.sh  shape.h
